--- a/footer.html
+++ b/footer.html
@@ -39,11 +39,13 @@
           </ul>
         </div>
         <div class="social-wrapper">
+          <h4>Social</h4>
           <ul>
             <li><i class="fab fa-instagram"></i></li>
             <li><i class="fa-brands fa-linkedin"></i></li>
             <li><i class="fa-solid fa-envelope"></i></li>
           </ul>
+          <p>COMBANY©2022</p>
         </div>
       </div>
     </footer>
