--- a/index.html
+++ b/index.html
@@ -24,8 +24,18 @@
        <div class="menu">
          <li><a href="/">Home</a></li>
          <li><a href="/">About</a></li>
-         <li class="services">
-           <a href="/">Services</a>
+         <div class="services-arrows">
+          <li id="services" class="services">Services </li>
+          <i id="arrowup" class="fa-solid fa-caret-up"></i>
+          </i><i id ="arrowdn"class="fa-solid fa-caret-down"></i>
+         </div>
+           <ul id="dropdown-hamburger">
+            <li><a href="/">Dropdown 1 </a></li>
+            <li><a href="/">Dropdown 2</a></li>
+            <li><a href="/">Dropdown 2</a></li>
+            <li><a href="/">Dropdown 3</a></li>
+            <li><a href="/">Dropdown 4</a></li>
+          </ul>
            <!-- DROPDOWN MENU -->
            <ul class="dropdown">
              <li><a href="/">Dropdown 1 </a></li>
@@ -33,7 +43,6 @@
              <li><a href="/">Dropdown 2</a></li>
              <li><a href="/">Dropdown 3</a></li>
              <li><a href="/">Dropdown 4</a></li>
-             <i class="fa-solid fa-plus"></i>
            </ul>
          </li>
          <li><a href="/">Previous Projects</a></li>
@@ -41,5 +50,6 @@
        </div>
      </ul>
    </nav>
+   <script src="dropdbt.js"></script>
  </body>
 </html>
