alla sidor samma nav och footer

--- a/index.html
+++ b/index.html
@@ -1,55 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
- <head>
-   <meta charset="UTF-8" />
-   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-   <link rel="stylesheet" href="style.css" />
-   <script
-   src="https://kit.fontawesome.com/62db96ebb4.js"
-   crossorigin="anonymous"
- ></script>
-   <title>Document</title>
- </head>
- <body>
-   <nav class="navbar">
-     <!-- LOGO -->
-     <div class="logo">Portfolio</div>
-     <!-- NAVIGATION MENU -->
-     <ul class="nav-links">
-       <!-- USING CHECKBOX HACK -->
-       <input type="checkbox" id="checkbox_toggle" />
-       <label for="checkbox_toggle" class="hamburger">&#9776;</label>
-       <!-- NAVIGATION MENUS -->
-       <div class="menu">
-         <li><a href="/">Home</a></li>
-         <li><a href="/">About</a></li>
-         <div class="services-arrows">
-          <li id="services" class="services">Services </li>
-          <i id="arrowup" class="fa-solid fa-caret-up"></i>
-          </i><i id ="arrowdn"class="fa-solid fa-caret-down"></i>
-         </div>
-           <ul id="dropdown-hamburger">
-            <li><a href="/">Dropdown 1 </a></li>
-            <li><a href="/">Dropdown 2</a></li>
-            <li><a href="/">Dropdown 2</a></li>
-            <li><a href="/">Dropdown 3</a></li>
-            <li><a href="/">Dropdown 4</a></li>
-          </ul>
-           <!-- DROPDOWN MENU -->
-           <ul class="dropdown">
-             <li><a href="/">Dropdown 1 </a></li>
-             <li><a href="/">Dropdown 2</a></li>
-             <li><a href="/">Dropdown 2</a></li>
-             <li><a href="/">Dropdown 3</a></li>
-             <li><a href="/">Dropdown 4</a></li>
-           </ul>
-         </li>
-         <li><a href="/">Previous Projects</a></li>
-         <li><a href="/">Contact</a></li>
-       </div>
-     </ul>
-   </nav>
-   <script src="dropdbt.js"></script>
- </body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+    <link rel="stylesheet" href="css/footer.css" />
+    <link rel="stylesheet" href="css/hamburger.css" />
+    <link rel="stylesheet" href="css/theme.css" />
+    <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
+    <script
+      src="https://kit.fontawesome.com/62db96ebb4.js"
+      crossorigin="anonymous"
+    ></script>
+  </head>
+  <body>
+    <!--Navigation bar-->
+    <div id="nav-placeholder"></div>
+    <script>
+      $(function () {
+        $("#nav-placeholder").load("nav.html");
+      });
+    </script>
+    <!--end of Navigation bar-->
+    <main>
+      <p>hej</p>
+    </main>
+    <!--Navigation bar-->
+    <div id="footer-placeholder"></div>
+    <script>
+      $(function () {
+        $("#footer-placeholder").load("foter.html");
+      });
+    </script>
+    <!--end of Navigation bar-->
+  </body>
 </html>
