--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <div id="nav-placeholder"></div>
     <script>
       $(function () {
-        $("#nav-placeholder").load("nav.html");
+        $("#nav-placeholder").load("assets/nav.html");
       });
     </script>
     <!--end of Navigation bar-->
@@ -30,7 +30,7 @@
     <div id="footer-placeholder"></div>
     <script>
       $(function () {
-        $("#footer-placeholder").load("foter.html");
+        $("#footer-placeholder").load("assets/footer.html");
       });
     </script>
     <!--end of Navigation bar-->
