--- a/assets/nav.html
+++ b/assets/nav.html
@@ -1,6 +1,6 @@
 <header class="header">
   <nav class="navbar">
-    <a href="#" class="nav-logo">LEriksson.</a>
+    <a href="/" class="nav-logo">LEriksson.</a>
     <ul class="nav-menu">
       <li class="nav-item">
         <a href="hamburger.html" class="nav-link">Home</a>
