hero-img + templ card

--- a/shop.html
+++ b/shop.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/footer.css" />
     <link rel="stylesheet" href="css/hamburger.css" />
     <link rel="stylesheet" href="css/theme.css" />
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/shop.css" />
     <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
     <script
       src="https://kit.fontawesome.com/62db96ebb4.js"
@@ -25,11 +25,33 @@
     </script>
     <!--end of Navigation bar-->
     <main>
-      <div class="hero-img">
-        <div class="text-wrapper">
-          <h1>Rubrik</h1>
-          <p>Hej här är våran slogan</p>
-          <a href="#">Shop</a>
+      <div class="card-row">
+        <div class="card-wrapper">
+          <div>
+            <img src="img/daniel-korpai-hbTKIbuMmBI-unsplash.jpg" alt="" />
+            <div class="info-wrapper">
+              <p>Product</p>
+              <p>100$</p>
+            </div>
+          </div>
+        </div>
+        <div class="card-wrapper">
+          <div>
+            <img src="img/daniel-korpai-hbTKIbuMmBI-unsplash.jpg" alt="" />
+            <div class="info-wrapper">
+              <p>Product</p>
+              <p>100$</p>
+            </div>
+          </div>
+        </div>
+        <div class="card-wrapper">
+          <div>
+            <img src="img/daniel-korpai-hbTKIbuMmBI-unsplash.jpg" alt="" />
+            <div class="info-wrapper">
+              <p>Product</p>
+              <p>100$</p>
+            </div>
+          </div>
         </div>
       </div>
     </main>
