--- a/assets/nav.html
+++ b/assets/nav.html
@@ -9,7 +9,7 @@
         <a href="shop.html" class="nav-link">Shop</a>
       </li>
       <li class="nav-item">
-        <a href="#" class="nav-link">sida 3</a>
+        <a href="shop-cart.html" class="nav-link">Cart</a>
       </li>
       <li class="nav-item">
         <a href="#" class="nav-link">Contact</a>
